<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lichev.physics.MainActivity">


    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/atomi_512px"
        android:id="@+id/welcome_logo"
        android:alpha="0.2"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/planets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lvl2"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btn_exit"/>

    <Button
        android:text="@string/mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lvl1"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/btn_exit"/>

    <Button
        android:text="@string/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exit"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"/>

    <TextView
        android:text="@string/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/signature"
        android:textSize="10sp"
        android:fontFamily="monospace"
        android:typeface="monospace"
        android:textAlignment="center"
        android:textStyle="normal|italic"/>

</RelativeLayout>
