<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_mass_level1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lichev.physics.MassActivity">

    <TextView
        android:text="@string/objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/mass_info"
        android:textAlignment="center"
        android:lineSpacingExtra="8sp"
        android:textSize="16sp"/>



    <ImageView
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="39dp"
        android:id="@+id/massImage"
        app:srcCompat="@drawable/guitar_rdy"
        android:layout_below="@+id/mass_info"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:text="@string/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerScore"
        android:textAlignment="center"
        android:layout_alignTop="@+id/massImage"
        android:layout_alignStart="@+id/massImage"/>

    <Button
        android:visibility="invisible"
        android:text="@string/nextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_next"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/massImage"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/btn_yellow_rdy"
        android:id="@+id/dot2"
        android:shape="ring"
        android:scaleX="0.3"
        android:scaleY="0.3"
        android:background="?android:selectableItemBackground"
        android:adjustViewBounds="false"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/playerScore"
        android:layout_toEndOf="@+id/playerScore"/>

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/btn_yellow_rdy"
        android:id="@+id/dot1"
        android:shape="ring"
        android:scaleX="0.3"
        android:scaleY="0.3"
        android:background="?android:selectableItemBackground"
        android:adjustViewBounds="false"
        android:layout_marginEnd="15dp"
        android:layout_alignTop="@+id/dot2"
        android:layout_alignEnd="@+id/btn_next"/>

</RelativeLayout>
